# SP

./: CMakeLists.txt  README.md
Aud/Aud 1/: 1.cpp  Hello.cpp
Aud/Aud 10/: 1.cpp  2.cpp  2_1.cpp  3.cpp  5.cpp  6.cpp  7.cpp
Aud/Aud 11/: 1.cpp  2.cpp  3.cpp  4.cpp
Aud/Aud 12/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
Aud/Aud 2/: 1.cpp  10.cpp  11.cpp  12.cpp  1a.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
Aud/Aud 7/: 1f.cpp
Aud/Aud 8/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  7.cpp  8.cpp
Aud/Aud 9/: 1.cpp  2.cpp  3.cpp
Labs/1/: 1.cpp
Labs/Labs 1/: 1.cpp  1a.cpp  2.cpp  3.cpp  3a.cpp  Dr_resenija.cpp  Zad_1.cpp  Zad_1a.cpp  Zad_2.cpp  Zad_3.cpp  Zad_3a.cpp
Labs/Labs 2/: 1.cpp  1a.cpp  2.cpp  2a.cpp  3.cpp  3a.cpp  Zad1.cpp  Zad1a.cpp  Zad2.cpp  Zad2a.cpp  Zad3.cpp  Zad3a.cpp
Labs/Labs 3/: 1.cpp  2.cpp  3.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad3a.cpp
Labs/Labs 4/: 1.cpp  2.cpp  zad1_.cpp
Labs/Labs 5/: 1.cpp  2.cpp  lab5_1.cpp  lab5_2.cpp
Labs/Labs 6/: 1.cpp  2.cpp  3.cpp  lab6_2.cpp  lab6_3.cpp
Labs/Labs 7/: 1.cpp  2.cpp  3.cpp
Labs/Labs 8/: 1.cpp  2.cpp  3.cpp
Labs/Labs 9/: 1.cpp  2.cpp  3.cpp
